--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,14 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!-- Fonts and icons -->
 		<script src="./assets/js/plugin/webfont/webfont.min.js"></script>
+		
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
 		<script>
 			WebFont.load({
-				google: {"families":["Lato:300,400,700,900"]},
+				google: {"families":["Lato:300,400,700,900","Material+Icons:300,400,700,900"]},
 				custom: {"families":["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['./assets/css/fonts.min.css']},
 				active: function() {
 					sessionStorage.fonts = true;
