--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 		<base href="/" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
