--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<title>React App</title>
 		<meta charset="utf-8" />
@@ -9,24 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!-- Fonts and icons -->
 		<script src="./assets/js/plugin/webfont/webfont.min.js"></script>
-		
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-		/>
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 		<script>
 			WebFont.load({
-				google: {"families":["Lato:300,400,700,900","Material+Icons:300,400,700,900"]},
-				custom: {"families":["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['./assets/css/fonts.min.css']},
-				active: function() {
+				google: { "families": ["Lato:300,400,700,900", "Material+Icons:300,400,700,900"] },
+				custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['./assets/css/fonts.min.css'] },
+				active: function () {
 					sessionStorage.fonts = true;
 				}
 			});
@@ -38,6 +33,12 @@
 
 		<!-- CSS Just for demo purpose, don't include it in your project -->
 		<link rel="stylesheet" href="./assets/css/demo.css">
+		<!-- Font Awesome -->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+		<!-- MDB -->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -81,4 +82,5 @@
 		<!-- Atlantis JS -->
 		<script src="./assets/js/atlantis.min.js"></script>
 	</body>
+
 </html>
