--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>React App</title>
+		<title>Enhanced Compliance</title>
 		<meta charset="utf-8" />
 		<base href="/" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
