--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Enhanced Compliance</title>
 		<meta charset="utf-8" />
 		<base href="/" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/logo1.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
